force-app/main/default/objects/SBQQ__Subscription__c/fields/Basic_Helper__c.field-meta.xml
<CustomField>
        <fullName>Basic_Helper__c</fullName>
        <label>Basic Helper</label>
        <length>16</length>
        <type>Text</type>
    </CustomField>