force-app/main/default/objects/SBQQ__Subscription__c/fields/Business_Partner_Type_Discount__c.field-meta.xml
<CustomField>
        <fullName>Business_Partner_Type_Discount__c</fullName>
        <label>Business Partner Type Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>