force-app/main/default/objects/SBQQ__Subscription__c/fields/Deal_Registration_Status_Discount__c.field-meta.xml
<CustomField>
        <fullName>Deal_Registration_Status_Discount__c</fullName>
        <description>SFSL-520</description>
        <label>Deal Registration Status Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>