force-app/main/default/objects/SBQQ__Subscription__c/fields/Eligible_for_Premium_Care__c.field-meta.xml
<CustomField>
        <fullName>Eligible_for_Premium_Care__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SFSL-520</description>
        <label>Eligible for Premium Care</label>
        <type>Checkbox</type>
    </CustomField>