force-app/main/default/objects/SBQQ__Subscription__c/fields/License_Codes__c.field-meta.xml
<CustomField>
        <fullName>License_Codes__c</fullName>
        <description>SFSL-520</description>
        <label>License Codes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </CustomField>