force-app/main/default/objects/SBQQ__Subscription__c/fields/Partner_or_Distributor_Discount__c.field-meta.xml
<CustomField>
        <fullName>Partner_or_Distributor_Discount__c</fullName>
        <description>SFSL-520</description>
        <label>Partner or Distributor Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>