force-app/main/default/objects/SBQQ__Subscription__c/fields/Partner_Tier_Level_Discount__c.field-meta.xml
<CustomField>
        <fullName>Partner_Tier_Level_Discount__c</fullName>
        <description>SFSL-520</description>
        <label>Partner Tier Level Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </CustomField>