force-app/main/default/objects/SBQQ__Subscription__c/fields/Pro_Rated_Net_Amount__c.field-meta.xml
<CustomField>
        <fullName>Pro_Rated_Net_Amount__c</fullName>
        <formula>IF( 
(SBQQ__StartDate__c &gt;TODAY()),
(SBQQ__NetPrice__c * SBQQ__Quantity__c ),
(SBQQ__EndDate__c - TODAY())*((SBQQ__NetPrice__c/365)* SBQQ__Quantity__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pro Rated Net Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </CustomField>