force-app/main/default/objects/SBQQ__Subscription__c/fields/Product_Version__c.field-meta.xml
<CustomField>
        <fullName>Product_Version__c</fullName>
        <description>SFSL-520</description>
        <label>Product Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2016.2</fullName>
                </value>
                <value>
                    <fullName>2017.1</fullName>
                </value>
                <value>
                    <fullName>2018.1</fullName>
                </value>
                <value>
                    <fullName>2018.2</fullName>
                </value>
                <value>
                    <fullName>2018.3</fullName>
                </value>
                <value>
                    <fullName>2018.4</fullName>
                </value>
                <value>
                    <fullName>2019.4</fullName>
                </value>
                <value>
                    <fullName>2019.10</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>