force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__Contract__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Contract that governs this subscription.</description>
        <inlineHelpText>Contract that governs this subscription.</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </CustomField>