force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__NetPrice__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__NetPrice__c</fullName>
        <description>Net price for this subscription.</description>
        <inlineHelpText>Net price for this subscription.</inlineHelpText>
        <label>Net Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>