force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__Quantity__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Quantity__c</fullName>
        <description>Quantity of this subscription product purchased by the customer.</description>
        <inlineHelpText>Quantity of this subscription product purchased by the customer.</inlineHelpText>
        <label>Quantity</label>
        <precision>12</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>