force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__SegmentEndDate__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SegmentEndDate__c</fullName>
        <description>For MDQ products, the End Date from the original segment&#39;s Quote Line.</description>
        <inlineHelpText>For MDQ products, the End Date from the original segment&#39;s Quote Line.</inlineHelpText>
        <label>Segment End Date</label>
        <type>Date</type>
    </CustomField>