force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__SegmentStartDate__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SegmentStartDate__c</fullName>
        <description>For MDQ products, the Start Date from the original segment&#39;s Quote Line.</description>
        <inlineHelpText>For MDQ products, the Start Date from the original segment&#39;s Quote Line.</inlineHelpText>
        <label>Segment Start Date</label>
        <type>Date</type>
    </CustomField>