force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__SegmentUpliftAmount__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SegmentUpliftAmount__c</fullName>
        <description>For MDQ products, the Uplift Amount from the original segment&#39;s Quote Line.</description>
        <inlineHelpText>For MDQ products, the Uplift Amount from the original segment&#39;s Quote Line.</inlineHelpText>
        <label>Segment Uplift (Amt)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>