force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__SpecialPrice__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__SpecialPrice__c</fullName>
        <description>Special Price for this Subscription.</description>
        <inlineHelpText>Special Price for this Subscription.</inlineHelpText>
        <label>Special Price</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>