force-app/main/default/objects/SBQQ__Subscription__c/fields/SBQQ__UnitCost__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__UnitCost__c</fullName>
        <description>Unit Cost for this Subscription.</description>
        <inlineHelpText>Unit Cost for this Subscription.</inlineHelpText>
        <label>Unit Cost</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>