force-app/main/default/objects/SBQQ__Subscription__c/fields/Select_Orchestrator__c.field-meta.xml
<CustomField>
        <fullName>Select_Orchestrator__c</fullName>
        <label>Select Orchestrator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Orchestrator</fullName>
                </value>
                <value>
                    <fullName>Basic</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Cloud</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>