force-app/main/default/objects/SBQQ__Subscription__c/validationRules/SBQQ__Renewal_Quantity_cannot_be_editable.validationRule-meta.xml
<ValidationRule>
        <fullName>SBQQ__Renewal_Quantity_cannot_be_editable</fullName>
        <active>true</active>
        <description>Renewal Quantity cannot be editable.</description>
        <errorConditionFormula>if ( (SBQQ__Contract__r.SBQQ__PreserveBundleStructureUponRenewals__c == true &amp;&amp; SBQQ__RenewalQuantity__c != SBQQ__Quantity__c &amp;&amp; ISCHANGED(SBQQ__RenewalQuantity__c)), true, false)</errorConditionFormula>
        <errorMessage>Preserve Bundle Structure is checked on Contract, Renewal Quantity cannot be different from Quantity.</errorMessage>
    </ValidationRule>