force-app/main/default/objects/SBQQ__Subscription__c/listViews/SBQQ__All.listView-meta.xml
<ListView>
        <fullName>SBQQ__All</fullName>
        <columns>NAME</columns>
        <columns>SBQQ__ContractNumber__c</columns>
        <columns>SBQQ__QuoteLine__c</columns>
        <columns>SBQQ__Product__c</columns>
        <columns>SBQQ__SubscriptionStartDate__c</columns>
        <columns>SBQQ__StartDate__c</columns>
        <columns>SBQQ__EndDate__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>